[package]
name = "bufdraw"
version = "0.1.5"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/optozorax/bufdraw"
description = """
Cross-platform window context and rendering library in buffer.
"""

[dependencies]
miniquad = "0.2.13"
sapp-console-log = "0.1.0"

[dev-dependencies]
log = "0.4"