[package]
name = "bufdraw"
version = "0.1.27"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/optozorax/bufdraw"
description = """
Cross-platform window context and rendering library in buffer.
"""

[dependencies]
miniquad = "0.2.38"
rusttype = "0.8"
lazy_static = "1.0"
miniquad-parameters = { git = "https://github.com/optozorax/miniquad-parameters", version = "0.1.1" }
png = "0.16.0"

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.7.1"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-console-log = "0.1.0"

[dev-dependencies]
log = "0.4"

[dev-dependencies.gesture-recognizer]
git = "https://github.com/optozorax/gesture-recognizer"
default-features = false
features = ["miniquad"]

[dev-dependencies.raqote]
version = "0.7"
default-features = false
features = []
